# PicoDVI_rp2350

software/: CMakeLists.txt  Readme.md
software/apps/bad_apple/: main.c
software/apps/christmas_snowflakes/: main.c
software/apps/colour_terminal/: main.c
software/apps/dht_logging/: main.c
software/apps/hello_dvi/: main.c
software/apps/mandel-full/: main.c
software/apps/mandelbrot/: CMakeLists.txt  main.c
software/apps/moon/: CMakeLists.txt  main.c
software/apps/sprite_bounce/: CMakeLists.txt  main.c
software/apps/terminal/: CMakeLists.txt  main.c
software/apps/tiles/: CMakeLists.txt  main.c
software/apps/tiles_and_sprites/: CMakeLists.txt  main.c
software/apps/tiles_parallax/: CMakeLists.txt  main.c
software/apps/vista/: CMakeLists.txt  main.c
software/apps/vista-palette/: CMakeLists.txt  main.c
software/include/: common_dvi_pin_configs.h
